--- a/Student_Stress_Analysis.ipynb
+++ b/Student_Stress_Analysis.ipynb
@@ -1,8 +1,74 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "f5f1dfa9-152e-4009-8c87-1abd041034cb",
+   "metadata": {},
+   "source": [
+    "# Student Stress Analysis Project"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4890ae5b-b277-447c-81f1-06bb612576df",
+   "metadata": {},
+   "source": [
+    "Во нашиот проект се работеше со два  датасети. Првиот датасет, кој содржи конкретни и квантитативни психолошки, академски, социјални и здравствени индикатори, беше користен за сите анализа и кластеризации (KMeans, DBSCAN и PCA). \n",
+    "\n",
+    "Овој датасет има колони :\n",
+    "\n",
+    "anxiety_level – ниво на анксиозност кај студентот\n",
+    "\n",
+    "self_esteem – самодоверба и перцепција за себе\n",
+    "\n",
+    "mental_health_history – дали студентот има историја на ментални здравствени проблеми\n",
+    "\n",
+    "depression – ниво на депресија\n",
+    "\n",
+    "headache – фреквенција на главоболки\n",
+    "\n",
+    "blood_pressure – крвен притисок\n",
+    "\n",
+    "sleep_quality – квалитет на спиење\n",
+    "\n",
+    "breathing_problem – проблеми со дишењето\n",
+    "\n",
+    "noise_level – изложеност на бучава\n",
+    "\n",
+    "living_conditions – квалитет на животната средина\n",
+    "\n",
+    "bullying – искуство со насилство или малтретирање\n",
+    "\n",
+    "stress_level – проценето ниво на стрес\n",
+    "\n",
+    "study_load – обем на академски обврски\n",
+    "\n",
+    "academic_performance – академски успеси\n",
+    "\n",
+    "teacher_student_relationship – однос со професорите\n",
+    "\n",
+    "peer_pressure – притисок од врсници\n",
+    "\n",
+    "social_support – социјална поддршка\n",
+    "\n",
+    "extracurricular_activities – учество во дополнителни активности\n",
+    "\n",
+    "basic_needs, safety – задоволување на основни потреби и чувство на безбедност\n",
+    "\n",
+    "Точките во овој датасет овозможуваат прецизно мерење на фактори на стресот.\n",
+    "\n",
+    "Статистички анализа и избор на важни фактори: Преку T-test, ANOVA и PCA можеме да идентификуваме кои колони носат најмногу информации за варијацијата во нивото на стрес.\n",
+    "\n",
+    "Кластеризација: Користејќи ги овие нумерички колони, можеме да создадеме групи на студенти според нивниот стрес и психолошко/социјално оптоварување, како што се KMeans и DBSCAN кластерите.\n",
+    "\n",
+    "Вториот датасет е повеќе анкета и субјективно перцептивен, со прашања како „Have you recently experienced stress?“ или „Do you get irritated easily?“ кои се кодирани како цели броеви. Овој датасет не содржи директен „numeric identifier“ за поврзување со првиот, па затоа не беше користен за кластеризација, туку може да се користи за дополнителна анализа или за споредба на само-перцепиран стрес со резултатите од првиот датасет.\n",
+    "\n",
+    "Со други зборови, првиот датасет овозможи објективен, нумерички пристап за feature selection, feature importance и кластеризација, додека вториот датасет служи за дополнителна или комплементарна анализа на студентските перцепции."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "id": "087d79bb-861a-483a-8f9d-373a4c5c52ea",
    "metadata": {},
    "outputs": [],
@@ -27,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "id": "0ef92a0b-d690-4204-acc4-e9e07e224eb3",
    "metadata": {},
    "outputs": [],
@@ -38,226 +104,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 4,
    "id": "18613363-5786-4215-9a01-2d40153ad5d2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>anxiety_level</th>\n",
-       "      <th>self_esteem</th>\n",
-       "      <th>mental_health_history</th>\n",
-       "      <th>depression</th>\n",
-       "      <th>headache</th>\n",
-       "      <th>blood_pressure</th>\n",
-       "      <th>sleep_quality</th>\n",
-       "      <th>breathing_problem</th>\n",
-       "      <th>noise_level</th>\n",
-       "      <th>living_conditions</th>\n",
-       "      <th>...</th>\n",
-       "      <th>bullying</th>\n",
-       "      <th>stress_level</th>\n",
-       "      <th>sleep_group</th>\n",
-       "      <th>bullying_group</th>\n",
-       "      <th>career_group</th>\n",
-       "      <th>mh_group</th>\n",
-       "      <th>cluster</th>\n",
-       "      <th>PCA1</th>\n",
-       "      <th>PCA2</th>\n",
-       "      <th>cluster_label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>14</td>\n",
-       "      <td>20</td>\n",
-       "      <td>0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Poor Sleep</td>\n",
-       "      <td>Low Bullying</td>\n",
-       "      <td>None</td>\n",
-       "      <td>No History</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.054901</td>\n",
-       "      <td>-0.503013</td>\n",
-       "      <td>Moderate Stress</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>15</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Poor Sleep</td>\n",
-       "      <td>High Bullying</td>\n",
-       "      <td>High Career Concern</td>\n",
-       "      <td>Has History</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.938438</td>\n",
-       "      <td>-0.066037</td>\n",
-       "      <td>High Stress</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>12</td>\n",
-       "      <td>18</td>\n",
-       "      <td>1</td>\n",
-       "      <td>14</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Poor Sleep</td>\n",
-       "      <td>Low Bullying</td>\n",
-       "      <td>Low Career Concern</td>\n",
-       "      <td>Has History</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.317070</td>\n",
-       "      <td>0.047122</td>\n",
-       "      <td>Moderate Stress</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>16</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1</td>\n",
-       "      <td>15</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Poor Sleep</td>\n",
-       "      <td>High Bullying</td>\n",
-       "      <td>High Career Concern</td>\n",
-       "      <td>Has History</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.516541</td>\n",
-       "      <td>0.212625</td>\n",
-       "      <td>High Stress</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>16</td>\n",
-       "      <td>28</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>...</td>\n",
-       "      <td>5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Good Sleep</td>\n",
-       "      <td>High Bullying</td>\n",
-       "      <td>Low Career Concern</td>\n",
-       "      <td>No History</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.240473</td>\n",
-       "      <td>0.656312</td>\n",
-       "      <td>Moderate Stress</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 29 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   anxiety_level  self_esteem  mental_health_history  depression  headache  \\\n",
-       "0             14           20                      0          11         2   \n",
-       "1             15            8                      1          15         5   \n",
-       "2             12           18                      1          14         2   \n",
-       "3             16           12                      1          15         4   \n",
-       "4             16           28                      0           7         2   \n",
-       "\n",
-       "   blood_pressure  sleep_quality  breathing_problem  noise_level  \\\n",
-       "0               1              2                  4            2   \n",
-       "1               3              1                  4            3   \n",
-       "2               1              2                  2            2   \n",
-       "3               3              1                  3            4   \n",
-       "4               3              5                  1            3   \n",
-       "\n",
-       "   living_conditions  ...  bullying  stress_level  sleep_group  \\\n",
-       "0                  3  ...         2             1   Poor Sleep   \n",
-       "1                  1  ...         5             2   Poor Sleep   \n",
-       "2                  2  ...         2             1   Poor Sleep   \n",
-       "3                  2  ...         5             2   Poor Sleep   \n",
-       "4                  2  ...         5             1   Good Sleep   \n",
-       "\n",
-       "   bullying_group         career_group     mh_group  cluster      PCA1  \\\n",
-       "0    Low Bullying                 None   No History        0  0.054901   \n",
-       "1   High Bullying  High Career Concern  Has History        1  2.938438   \n",
-       "2    Low Bullying   Low Career Concern  Has History        0  0.317070   \n",
-       "3   High Bullying  High Career Concern  Has History        1  2.516541   \n",
-       "4   High Bullying   Low Career Concern   No History        0  0.240473   \n",
-       "\n",
-       "       PCA2    cluster_label  \n",
-       "0 -0.503013  Moderate Stress  \n",
-       "1 -0.066037      High Stress  \n",
-       "2  0.047122  Moderate Stress  \n",
-       "3  0.212625      High Stress  \n",
-       "4  0.656312  Moderate Stress  \n",
-       "\n",
-       "[5 rows x 29 columns]"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1100 entries, 0 to 1099\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                        Non-Null Count  Dtype\n",
+      "---  ------                        --------------  -----\n",
+      " 0   anxiety_level                 1100 non-null   int64\n",
+      " 1   self_esteem                   1100 non-null   int64\n",
+      " 2   mental_health_history         1100 non-null   int64\n",
+      " 3   depression                    1100 non-null   int64\n",
+      " 4   headache                      1100 non-null   int64\n",
+      " 5   blood_pressure                1100 non-null   int64\n",
+      " 6   sleep_quality                 1100 non-null   int64\n",
+      " 7   breathing_problem             1100 non-null   int64\n",
+      " 8   noise_level                   1100 non-null   int64\n",
+      " 9   living_conditions             1100 non-null   int64\n",
+      " 10  safety                        1100 non-null   int64\n",
+      " 11  basic_needs                   1100 non-null   int64\n",
+      " 12  academic_performance          1100 non-null   int64\n",
+      " 13  study_load                    1100 non-null   int64\n",
+      " 14  teacher_student_relationship  1100 non-null   int64\n",
+      " 15  future_career_concerns        1100 non-null   int64\n",
+      " 16  social_support                1100 non-null   int64\n",
+      " 17  peer_pressure                 1100 non-null   int64\n",
+      " 18  extracurricular_activities    1100 non-null   int64\n",
+      " 19  bullying                      1100 non-null   int64\n",
+      " 20  stress_level                  1100 non-null   int64\n",
+      "dtypes: int64(21)\n",
+      "memory usage: 180.6 KB\n"
+     ]
     }
    ],
    "source": [
-    "df_1.head()"
+    "df_1.info()"
    ]
   },
   {
