Update readme and add descriptions

--- a/Student_Stress_Analysis.ipynb
+++ b/Student_Stress_Analysis.ipynb
@@ -61,9 +61,23 @@
     "\n",
     "Кластеризација: Користејќи ги овие нумерички колони, можеме да создадеме групи на студенти според нивниот стрес и психолошко/социјално оптоварување, како што се KMeans и DBSCAN кластерите.\n",
     "\n",
-    "Вториот датасет е повеќе анкета и субјективно перцептивен, со прашања како „Have you recently experienced stress?“ или „Do you get irritated easily?“ кои се кодирани како цели броеви. Овој датасет не содржи директен „numeric identifier“ за поврзување со првиот, па затоа не беше користен за кластеризација, туку може да се користи за дополнителна анализа или за споредба на само-перцепиран стрес со резултатите од првиот датасет.\n",
-    "\n",
     "Со други зборови, првиот датасет овозможи објективен, нумерички пристап за feature selection, feature importance и кластеризација, додека вториот датасет служи за дополнителна или комплементарна анализа на студентските перцепции."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd44aa42-6afe-46e5-81db-653a6493c59a",
+   "metadata": {},
+   "source": [
+    "Вториот датасет е наменет за анализа на причините за стрес кај студентите и се базира на национална анкета спроведена спроведена во Америка на 843 студенти на возраст од 18 до 21 година. Податоците се собрани преку Google Forms и користат петстепена Ликертова скала, која се движи од „Воопшто не“ до „Екстремно“, со што се овозможува детално и нијансирано мерење на нивото на стрес и благосостојба. Сите одговори се анонимизирани со цел заштита на приватноста на испитаниците.\n",
+    "\n",
+    "Датасетот опфаќа околу 20 клучни карактеристики кои се групирани во пет научно идентификувани категории: психолошки, физиолошки, еколошки, академски и социјални фактори. Психолошките фактори вклучуваат показатели како ниво на анксиозност, самодоверба, историја на ментално здравје и депресија, кои се директно поврзани со емоционалната состојба на студентите. Физиолошките фактори се однесуваат на физичкото здравје и симптоми како главоболки, крвен притисок, квалитет на сон и проблеми со дишењето. Еколошките фактори ја опфаќаат околината во која живеат студентите, како што се нивото на бучава, условите за живеење, чувството на безбедност и задоволувањето на основните потреби.\n",
+    "\n",
+    "Академските фактори се фокусираат на образовните предизвици, вклучувајќи академски успех, обем на учење, односот меѓу наставник и студент и загриженоста за идната кариера. Социјалните фактори, пак, ги анализираат меѓучовечките односи и поддршката, како што се социјалната поддршка, притисокот од врсници, вклученоста во воннаставни активности и појавата на булинг.\n",
+    "\n",
+    "Дополнително, датасетот содржи демографски податоци како возраст и пол, при што полот е кодиран како 0 за машки и 1 за женски. Вклучени се и бројни прашања поврзани со емоционални, физички, академски и социјални индикатори на стрес, како на пример проблеми со спиењето, потешкотии со концентрација, чувство на осаменост, преоптовареност со академски обврски и конфликти со професори или со врсници.\n",
+    "\n",
+    "Целната променлива во датасетот е типот на стрес кој студентот примарно го доживува и е категоризирана во три класи: еустрес (позитивен, мотивациски стрес), дистрес (негативен, штетен стрес) и отсуство на стрес. Благодарение на оваа структура, датасетот овозможува детална анализа на поврзаноста помеѓу различните фактори и видот на стрес, како и развој на модели за предвидување и подобро разбирање на студентската благосостојба."
    ]
   },
   {
@@ -353,6 +367,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "40994aa4-a28a-4ae3-b5a3-c306d3f700f9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Погоре имаме визуелизации за распределбата годините на старост, дистрибуција на нивото на стрес каде што може да се види дека има рамномерна распределба и\n",
+    "типовите на стрес со нивната дистрибуција која е добиена од вториот податочен сет со помош на анкетата."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 67,
    "id": "f1b0da5c-fff8-4060-9578-a929559f510e",
    "metadata": {},
@@ -475,21 +500,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 69,
-   "id": "eb086126-0a1f-4e92-8264-1f316421b601",
+   "cell_type": "markdown",
+   "id": "47e4571e-e912-476d-bd74-3bed71046a44",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Social & Academic Factors\n",
-    "#High stress (Level 2) students report much higher levels of:\n",
-    "#Peer Pressure and Bullying\n",
-    "#Study Load and Future Career Concerns\n",
-    "#Low stress (Level 0) students show:\n",
-    "#Better Academic Performance\n",
-    "#Stronger Teacher–Student Relationships\n",
-    "#Interpretation: Social and academic environments are critical drivers of stress.\n",
-    "#Students who feel pressured, bullied, or overloaded are far more likely to be highly stressed."
+    "Социјални и академски фактори\n",
+    "Студентите со висок стрес (Ниво 2) пријавуваат значително повисоки нивоа на:\n",
+    "Притисок од врсници и булинг\n",
+    "Обем на учење и грижи за идната кариера\n",
+    "Студентите со низок стрес (Ниво 0) покажуваат:\n",
+    "Подобри академски перформанси\n",
+    "Посилни односи помеѓу наставници и студенти\n",
+    "Заклучок: Социјалната и академската средина се клучни двигатели на стресот. Студентите кои чувствуваат притисок, се изложени на булинг или се преоптоварени и имаат многу поголема веројатност да искусат високо ниво на стрес."
    ]
   },
   {
@@ -662,7 +684,7 @@
    "id": "d2c7e8bd-d0a6-49dd-92c5-9f03321cae3f",
    "metadata": {},
    "source": [
-    "Подолу T-test и ниговите визуелзиации ни покажуваат дали две групи студенти имаат различно ниво на стрес. Во нашата анализа се споредуваме студенти со Poor vs Good sleep, Low vs High bullying, Low vs High career concerns и оние со или без историја на ментални проблеми. Резултатите покажуваат дека студентите од групите со Poor sleep, High bullying, High career concerns и историја на ментални проблеми имаат значително повисоко ниво на стрес. П-вредноста ни кажува колку е веројатно оваа разлика да се случила случајно, т.е. многу мала п-вредност (практично 0) значи дека разликата е вистинска и статистички значајна. За T-test се земени променливи (колони) кои најмногу влијаат на стресот т.е. оние колони кои имаат силна позитивна/негативна корелираност според пирсоновата матрица на корелираност."
+    "Подолу T-test и неговите визуелзиации ни покажуваат дали две групи студенти имаат различно ниво на стрес. Во нашата анализа се споредуваме студенти со Poor vs Good sleep, Low vs High bullying, Low vs High career concerns и оние со или без историја на ментални проблеми. Резултатите покажуваат дека студентите од групите со Poor sleep, High bullying, High career concerns и историја на ментални проблеми имаат значително повисоко ниво на стрес. П-вредноста ни кажува колку е веројатно оваа разлика да се случила случајно, т.е. многу мала п-вредност (практично 0) значи дека разликата е вистинска и статистички значајна. За T-test се земени променливи (колони) кои најмногу влијаат на стресот т.е. оние колони кои имаат силна позитивна/негативна корелираност според пирсоновата матрица на корелираност."
    ]
   },
   {
@@ -1313,7 +1335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
