--- a/Student_Stress_Analysis.ipynb
+++ b/Student_Stress_Analysis.ipynb
@@ -1727,7 +1727,7 @@
    "id": "32c57923-2c00-4abd-8d5e-bfea181754ef",
    "metadata": {},
    "source": [
-    "Модел 1: Логистичка регресија:"
+    "# Модел 1: Логистичка регресија:"
    ]
   },
   {
@@ -1778,10 +1778,21 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8e9fe52a-9550-4a3c-8a1e-5e40f07b942f",
+   "metadata": {},
+   "source": [
+    "Во рамки на проектот, како еден од супервизираните модели за машинско учење, беше применета Логистичка регресија со цел да се предвиди типот на стрес кај студентите (No Stress – 0, Eustress – 1, Distress – 2) врз основа на психолошки, академски, социјални и здравствени фактори.\n",
+    "Логистичката регресија е линеарен класификациски модел кој ја проценува веројатноста еден примерок да припаѓа на одредена класа преку логит функција. Иако е релативно едноставен модел, таа е многу корисна како базен модел поради својата интерпретабилност и стабилност при работа со нумерички податоци.\n",
+    "\n",
+    "Логистичката регресија се покажа како ефикасен и стабилен модел за предвидување на типот на стрес кај студентите. Нејзината висока точност и добар баланс помеѓу precision и recall укажуваат дека избраните карактеристики (психолошки, академски и социјални фактори) се релевантни и доволно информативни."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f09e3919-88df-46cc-a5bc-6e72292daddc",
    "metadata": {},
    "source": [
-    "Модел 2: Random Forest Classifier"
+    "# Модел 2: Random Forest Classifier"
    ]
   },
   {
@@ -1832,6 +1843,26 @@
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred_rf))\n",
     "print(classification_report(y_test, y_pred_rf))\n",
     "print(confusion_matrix(y_test, y_pred_rf))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "252c1331-b9f2-445e-ab7c-84924fdc056e",
+   "metadata": {},
+   "source": [
+    "Во проектот беше применет и Random Forest класификатор како напреден супервизиран модел за машинско учење со цел да се предвиди типот на стрес кај студентите (No Stress – 0, Eustress – 1, Distress – 2) врз основа на психолошки, академски, социјални и здравствени фактори.\n",
+    "\n",
+    "Random Forest е енсембл метод кој комбинира повеќе одлучувачки дрва (Decision Trees) со цел да се намали пренагласеноста (overfitting) и да се зголеми точноста и стабилноста на моделот. Секое дрво носи независна одлука, а финалната класификација се добива преку гласање (majority voting).\n",
+    "\n",
+    "Random Forest се покажа како поефикасен модел во овој проект, со највисока точност и стабилни резултати за сите класи. Овој модел е особено погоден за анализа на комплексни психолошки и социјални податоци, каде што влијанијата се повеќедимензионални и нелинеарни. Поради овие причини, Random Forest може да се смета како препорачан модел за предвидување на студентскиот стрес во рамки на овој проект.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "493c9caf-526d-437e-b7c1-a0a9bb811e51",
+   "metadata": {},
+   "source": [
+    "# Feature Importance"
    ]
   },
   {
@@ -1949,6 +1980,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59b53ecb-b830-4889-b3b8-51821b031b20",
+   "metadata": {},
+   "source": [
+    "Една од клучните предности на Random Forest моделот е можноста за анализа на важноста на карактеристиките (feature importance). Оваа анализа овозможува да се идентификуваат факторите кои имаат најголемо влијание врз предвидувањето на типот и нивото на стрес кај студентите.\n",
+    "\n",
+    "Feature importance вредностите се пресметуваат врз основа на тоа колку често и колку ефективно одредена карактеристика се користи за поделба на податоците низ сите одлучувачки дрва во шумата. Поголема вредност означува поголем придонес кон финалната одлука на моделот.\n",
+    "\n",
+    "Анализата покажа дека следните карактеристики имаат најголемо влијание:\n",
+    "\n",
+    "Anxiety level – најсилен индикатор за зголемен стрес\n",
+    "\n",
+    "Depression – значително влијае врз појавата на distress\n",
+    "\n",
+    "Study load – висок обем на академски обврски директно поврзан со стрес\n",
+    "\n",
+    "Sleep quality – нарушениот сон силно корелира со повисоки нивоа на стрес\n",
+    "\n",
+    "Peer pressure – социјалниот притисок е важен фактор, особено кај помладите студенти\n",
+    "\n",
+    "Academic performance – пониските академски резултати се поврзани со повисок стрес\n",
+    "\n",
+    "Овие фактори припаѓаат на различни категории (психолошки, академски и социјални), што ја потврдува мултидимензионалната природа на студентскиот стрес.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "3b0ebb51-ab30-4345-8c25-4258d99f37fe",
@@ -1998,7 +2055,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
